--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 
 <body>
-    <h1>Perfil #catsoninstagram</h1><img src="images/nome_da_sua_imagem.jpg" />
+    <h1>Perfil #catsoninstagram</h1><img src="curso-git-github\img.jpg" />
 </body>
+
+
 
 </html>
