--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <h1>Perfil #catsoninstagram</h1><img src="curso-git-github\img.jpg" />
+    <h1>Perfil #catsoninstagram</h1><img src="curso-git-github/img.jpg" />
 </body>
 
 
